unpackaged/main/default/objects/Account/fields/Adresse_editee_sur_le_CR__c.field-meta.xml
<CustomField>
    <fullName>Adresse_editee_sur_le_CR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adresse éditée sur le CR</label>
    <referenceTo>Adresses__c</referenceTo>
    <relationshipLabel>Comptes (Adresse éditée sur le CR)</relationshipLabel>
    <relationshipName>Comptes3</relationshipName>
    <type>Lookup</type>
</CustomField>