unpackaged/main/default/objects/Account/fields/AdrFact_CP__c.field-meta.xml
<CustomField>
    <fullName>AdrFact_CP__c</fullName>
    <label>Code Postal</label>
    <length>10</length>
    <type>Text</type>
</CustomField>