unpackaged/main/default/objects/Account/fields/AdrFact_Nom__c.field-meta.xml
<CustomField>
    <fullName>AdrFact_Nom__c</fullName>
    <label>Nom Etablissement</label>
    <length>40</length>
    <type>Text</type>
</CustomField>