unpackaged/main/default/objects/Account/fields/AdrFact_Rue1__c.field-meta.xml
<CustomField>
    <fullName>AdrFact_Rue1__c</fullName>
    <label>Rue Ligne 1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>