unpackaged/main/default/objects/Account/fields/AdrFact_Serv__c.field-meta.xml
<CustomField>
    <fullName>AdrFact_Serv__c</fullName>
    <label>Service</label>
    <length>40</length>
    <type>Text</type>
</CustomField>