unpackaged/main/default/objects/Account/fields/Associe_a_ma_BU__c.field-meta.xml
<CustomField>
    <fullName>Associe_a_ma_BU__c</fullName>
    <formula>IF 
(Structure_BU__c= 
TEXT($User.BU__c) 
,true, 

false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Associé à ma BU</label>
    <type>Checkbox</type>
</CustomField>