unpackaged/main/default/objects/Account/fields/Associe_a_ma_structure__c.field-meta.xml
<CustomField>
    <fullName>Associe_a_ma_structure__c</fullName>
    <formula>IF 
(Structure_Structure__c= 
TEXT($User.Structure__c)
,true,

false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Associé à ma structure</label>
    <type>Checkbox</type>
</CustomField>