unpackaged/main/default/objects/Account/fields/CA_consolide__c.field-meta.xml
<CustomField>
    <fullName>CA_consolide__c</fullName>
    <formula>HYPERLINK( 

&quot;/lightning/r/Report/00O1t0000076VrFEAU/view?a:t=1487190305660&amp;fv0=&quot; &amp;

CASESAFEID(Id),

$Label.Afficher 
, 
&quot;_new&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CA consolidé</label>
    <type>Text</type>
</CustomField>