unpackaged/main/default/objects/Account/fields/CA_global_du_compte__c.field-meta.xml
<CustomField>
    <fullName>CA_global_du_compte__c</fullName>
    <description>CA total toute activité confondue</description>
    <inlineHelpText>CA total toute activité confondue</inlineHelpText>
    <label>CA global du compte</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>