unpackaged/main/default/objects/Account/fields/CA_potentiel_d_anapath__c.field-meta.xml
<CustomField>
    <fullName>CA_potentiel_d_anapath__c</fullName>
    <label>CA potentiel d&#39;anapath</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>