unpackaged/main/default/objects/Account/fields/CA_potentiel_de_routine__c.field-meta.xml
<CustomField>
    <fullName>CA_potentiel_de_routine__c</fullName>
    <label>CA potentiel de routine</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>