unpackaged/main/default/objects/Account/fields/CA_specialite_par_gamme__c.field-meta.xml
<CustomField>
    <fullName>CA_specialite_par_gamme__c</fullName>
    <formula>HYPERLINK(

&quot;http://cspe-w-vsqlp01/ReportServer/Pages/ReportViewer.aspx?%2fListe%20des%20rapports%20sur%20le%20client&amp;rs:Command=Render&amp;Client=&quot; &amp;

 CASESAFEID(Id),

$Label.Afficher
,
&quot;_new&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rapports spécialité</label>
    <type>Text</type>
</CustomField>