unpackaged/main/default/objects/Account/fields/Categorie_du_client__c.field-meta.xml
<CustomField>
    <fullName>Categorie_du_client__c</fullName>
    <label>Catégorie du client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>