unpackaged/main/default/objects/Account/fields/Categories__c.field-meta.xml
<CustomField>
    <fullName>Categories__c</fullName>
    <label>Catégorie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Etablissements de Soins Privé</fullName>
            </value>
            <value>
                <fullName>Etablissements de Soins Publics</fullName>
            </value>
            <value>
                <fullName>Etablissement de Santé Privé d’Intérêt Collectif (ESPIC)</fullName>
            </value>
            <value>
                <fullName>Etablissements vétérinaires</fullName>
            </value>
            <value>
                <fullName>Cabinets Médicaux et Paramédicaux</fullName>
            </value>
            <value>
                <fullName>Entreprises et Institutions</fullName>
            </value>
            <value>
                <fullName>Laboratoires</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>