unpackaged/main/default/objects/Account/fields/Code_comptabilite_IRIS_Finance_Cerba__c.field-meta.xml
<CustomField>
    <fullName>Code_comptabilite_IRIS_Finance_Cerba__c</fullName>
    <label>Code comptabilité IRIS Finance Cerba</label>
    <length>18</length>
    <type>Text</type>
</CustomField>