unpackaged/main/default/objects/Account/fields/Code_compte_metier__c.field-meta.xml
<CustomField>
    <fullName>Code_compte_metier__c</fullName>
    <externalId>true</externalId>
    <label>Code compte métier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>