unpackaged/main/default/objects/Account/fields/Code_SGL__c.field-meta.xml
<CustomField>
    <fullName>Code_SGL__c</fullName>
    <externalId>true</externalId>
    <label>Code SGL</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>