unpackaged/main/default/objects/Account/fields/Collecte_a__c.field-meta.xml
<CustomField>
    <fullName>Collecte_a__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collecté à</label>
    <referenceTo>Adresses__c</referenceTo>
    <relationshipLabel>Comptes (Adresse de collecte)</relationshipLabel>
    <relationshipName>Comptes2</relationshipName>
    <type>Lookup</type>
</CustomField>