unpackaged/main/default/objects/Account/fields/Collecte_une_adresse_differente_du_CRU__c.field-meta.xml
<CustomField>
    <fullName>Collecte_une_adresse_differente_du_CRU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collecte à une adresse différente du CR</label>
    <type>Checkbox</type>
</CustomField>