unpackaged/main/default/objects/Account/fields/Compte_Parent__c.field-meta.xml
<CustomField>
    <fullName>Compte_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>2PACE
Champs pour faire apparaitre les comptes enfants sur les comptes parents en liste associée.</description>
    <label>Compte Parent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Compte Parent)</relationshipLabel>
    <relationshipName>ComptesEnfants</relationshipName>
    <type>Lookup</type>
</CustomField>