unpackaged/main/default/objects/Account/fields/Compte_Parent_Groupement__c.field-meta.xml
<CustomField>
    <fullName>Compte_Parent_Groupement__c</fullName>
    <formula>&#39;Créer formule&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compte Parent Groupement</label>
    <type>Text</type>
</CustomField>