unpackaged/main/default/objects/Account/fields/Conditions_de_Reglement_Cerbavet__c.field-meta.xml
<CustomField>
    <fullName>Conditions_de_Reglement_Cerbavet__c</fullName>
    <label>Conditions de Règlement Cerbavet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non Régleur</fullName>
            </value>
            <value>
                <fullName>Régleur</fullName>
            </value>
            <value>
                <fullName>Régleur en Prélèvement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>