unpackaged/main/default/objects/Account/fields/Contrat_Convention__c.field-meta.xml
<CustomField>
    <fullName>Contrat_Convention__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrat/Convention</label>
    <referenceTo>Contrats_Conventions__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>