unpackaged/main/default/objects/Account/fields/Date_1er_dossier_sur_tout_Historique_BI__c.field-meta.xml
<CustomField>
    <fullName>Date_1er_dossier_sur_tout_Historique_BI__c</fullName>
    <description>Date du premier dossier sur tout l&#39;historique</description>
    <inlineHelpText>Date du premier dossier sur tout l&#39;historique</inlineHelpText>
    <label>Date 1er dossier sur tout historique BI</label>
    <type>DateTime</type>
</CustomField>