unpackaged/main/default/objects/Account/fields/Date_de_chargement_init__c.field-meta.xml
<CustomField>
    <fullName>Date_de_chargement_init__c</fullName>
    <label>Date de chargement init</label>
    <type>DateTime</type>
</CustomField>