unpackaged/main/default/objects/Account/fields/Date_de_dernier_calcul_des_ascendants__c.field-meta.xml
<CustomField>
    <fullName>Date_de_dernier_calcul_des_ascendants__c</fullName>
    <label>Date de dernier calcul des ascendants</label>
    <type>DateTime</type>
</CustomField>