unpackaged/main/default/objects/Account/fields/Date_de_derniere_activite__c.field-meta.xml
<CustomField>
    <fullName>Date_de_derniere_activite__c</fullName>
    <label>Date de dernière activité</label>
    <type>Date</type>
</CustomField>