unpackaged/main/default/objects/Account/fields/Date_de_rattachement_au_parent__c.field-meta.xml
<CustomField>
    <fullName>Date_de_rattachement_au_parent__c</fullName>
    <label>Date de rattachement au parent</label>
    <type>Date</type>
</CustomField>