unpackaged/main/default/objects/Account/fields/Date_dernier_dossier_tout_Historique_BI__c.field-meta.xml
<CustomField>
    <fullName>Date_dernier_dossier_tout_Historique_BI__c</fullName>
    <description>Date du dernier dossier sur tout l&#39;historique BI</description>
    <inlineHelpText>Date du dernier dossier sur tout l&#39;historique BI</inlineHelpText>
    <label>Date dernier dossier tout historique BI</label>
    <type>DateTime</type>
</CustomField>