unpackaged/main/default/objects/Account/fields/Depose_resultat_a__c.field-meta.xml
<CustomField>
    <fullName>Depose_resultat_a__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dépose résultat à</label>
    <referenceTo>Adresses__c</referenceTo>
    <relationshipLabel>Comptes (Adresse de dépôt de résultat)</relationshipLabel>
    <relationshipName>Comptes</relationshipName>
    <type>Lookup</type>
</CustomField>