unpackaged/main/default/objects/Account/fields/Description_structure__c.field-meta.xml
<CustomField>
    <fullName>Description_structure__c</fullName>
    <label>Description structure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>