unpackaged/main/default/objects/Account/fields/Equipement_Clinique__c.field-meta.xml
<CustomField>
    <fullName>Equipement_Clinique__c</fullName>
    <label>Equipement Clinique </label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hématologie</fullName>
            </value>
            <value>
                <fullName>Biochimie</fullName>
            </value>
            <value>
                <fullName>Hormonologie</fullName>
            </value>
            <value>
                <fullName>Ionogramme</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>