unpackaged/main/default/objects/Account/fields/Est_rattache__c.field-meta.xml
<CustomField>
    <fullName>Est_rattache__c</fullName>
    <formula>IF(NOT(ISBLANK(ParentId)), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Est rattaché</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>