unpackaged/main/default/objects/Account/fields/Exoneration_Frais_de_Gestion__c.field-meta.xml
<CustomField>
    <fullName>Exoneration_Frais_de_Gestion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>2PACE</description>
    <inlineHelpText>Checkbox pour exonérer les frais de gestion sur les dossiers non régleur</inlineHelpText>
    <label>Exonération Frais de Gestion</label>
    <type>Checkbox</type>
</CustomField>