unpackaged/main/default/objects/Account/fields/Facturation_coursier__c.field-meta.xml
<CustomField>
    <fullName>Facturation_coursier__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Facturation du coursier pour 1 dossier</description>
    <inlineHelpText>Facturation du coursier pour 1 dossier</inlineHelpText>
    <label>Facturation coursier</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>