unpackaged/main/default/objects/Account/fields/Facturation_coursier_reduit__c.field-meta.xml
<CustomField>
    <fullName>Facturation_coursier_reduit__c</fullName>
    <inlineHelpText>Facturation du coursier pour 2 dossiers ou plus</inlineHelpText>
    <label>Facturation coursier réduit</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>