unpackaged/main/default/objects/Account/fields/Facture_Anonyme__c.field-meta.xml
<CustomField>
    <fullName>Facture_Anonyme__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facture anonyme</label>
    <type>Checkbox</type>
</CustomField>