unpackaged/main/default/objects/Account/fields/Frais_de_dossier__c.field-meta.xml
<CustomField>
    <fullName>Frais_de_dossier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Frais de dossier</label>
    <type>Checkbox</type>
</CustomField>