unpackaged/main/default/objects/Account/fields/Groupement_reseau_niveau_2__c.field-meta.xml
<CustomField>
    <fullName>Groupement_reseau_niveau_2__c</fullName>
    <label>Groupement réseau niveau 2</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Groupement_reseau_Niveau_1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACCORD CADRE ALMAVIVA</fullName>
            </value>
            <value>
                <fullName>ACCORD CADRE COLISEE</fullName>
            </value>
            <value>
                <fullName>ACCORD CADRE DIAVERUM</fullName>
            </value>
            <value>
                <fullName>ACCORD CADRE DOMIDEP</fullName>
            </value>
            <value>
                <fullName>ACCORD CADRE DOMUSVI</fullName>
            </value>
            <value>
                <fullName>ACCORD CADRE ELSAN</fullName>
            </value>
            <value>
                <fullName>ACCORD CADRE KORIAN</fullName>
            </value>
            <value>
                <fullName>ACCORD CADRE ORPEA-CLINEA</fullName>
            </value>
            <value>
                <fullName>ACCORD CADRE RAMSAY SANTE</fullName>
            </value>
            <value>
                <fullName>ACCORD CADRE VIVALTO</fullName>
            </value>
            <value>
                <fullName>ALPIVET</fullName>
            </value>
            <value>
                <fullName>ALVEO</fullName>
            </value>
            <value>
                <fullName>ANIBIO / ABIOPOLE</fullName>
            </value>
            <value>
                <fullName>ANISERV</fullName>
            </value>
            <value>
                <fullName>APEX</fullName>
            </value>
            <value>
                <fullName>AVEROES</fullName>
            </value>
            <value>
                <fullName>CDR DOUAISIS</fullName>
            </value>
            <value>
                <fullName>CLUBVET</fullName>
            </value>
            <value>
                <fullName>EDEL VET</fullName>
            </value>
            <value>
                <fullName>ELANVET</fullName>
            </value>
            <value>
                <fullName>G2E</fullName>
            </value>
            <value>
                <fullName>G5</fullName>
            </value>
            <value>
                <fullName>GIE 21</fullName>
            </value>
            <value>
                <fullName>GIE 7</fullName>
            </value>
            <value>
                <fullName>GIE SET</fullName>
            </value>
            <value>
                <fullName>GIE SOURCES DE LA MARNE</fullName>
            </value>
            <value>
                <fullName>GREF</fullName>
            </value>
            <value>
                <fullName>GROUPVET</fullName>
            </value>
            <value>
                <fullName>ID VET</fullName>
            </value>
            <value>
                <fullName>ISOVET</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>