unpackaged/main/default/objects/Account/fields/Hierarchie_Fact_Filiale__c.field-meta.xml
<CustomField>
    <fullName>Hierarchie_Fact_Filiale__c</fullName>
    <label>Hiérarchie Fact Filiale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>