unpackaged/main/default/objects/Account/fields/Hierarchie_Fact_Type__c.field-meta.xml
<CustomField>
    <fullName>Hierarchie_Fact_Type__c</fullName>
    <label>Hiérarchie Fact Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>