unpackaged/main/default/objects/Account/fields/Horaire_d_ouverture__c.field-meta.xml
<CustomField>
    <fullName>Horaire_d_ouverture__c</fullName>
    <label>Horaire d&#39;ouverture</label>
    <length>255</length>
    <type>Text</type>
</CustomField>