unpackaged/main/default/objects/Account/fields/IBAN__c.field-meta.xml
<CustomField>
    <fullName>IBAN__c</fullName>
    <description>2PACE
IBAN International Bank Account Number ISO 13616:2020</description>
    <label>IBAN</label>
    <length>32</length>
    <type>Text</type>
</CustomField>