unpackaged/main/default/objects/Account/fields/ID18__c.field-meta.xml
<CustomField>
    <fullName>ID18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID18</label>
    <type>Text</type>
</CustomField>