unpackaged/main/default/objects/Account/fields/Kbis__c.field-meta.xml
<CustomField>
    <fullName>Kbis__c</fullName>
    <label>Kbis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>