unpackaged/main/default/objects/Account/fields/Laboratoire_de_collecte_Cerbavet__c.field-meta.xml
<CustomField>
    <fullName>Laboratoire_de_collecte_Cerbavet__c</fullName>
    <description>labo qui collecte des prélèvements pour Cerbavet</description>
    <label>Laboratoire de collecte Cerbavet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alphabio</fullName>
            </value>
            <value>
                <fullName>Anabio Science</fullName>
            </value>
            <value>
                <fullName>Analysis</fullName>
            </value>
            <value>
                <fullName>Antagene</fullName>
            </value>
            <value>
                <fullName>BIO 2000</fullName>
            </value>
            <value>
                <fullName>Bio 67</fullName>
            </value>
            <value>
                <fullName>BIOLIA</fullName>
            </value>
            <value>
                <fullName>Biomag</fullName>
            </value>
            <value>
                <fullName>Bionyval</fullName>
            </value>
            <value>
                <fullName>BIORHIN</fullName>
            </value>
            <value>
                <fullName>BioSantis</fullName>
            </value>
            <value>
                <fullName>CBL Narbonne</fullName>
            </value>
            <value>
                <fullName>Cerballiance Alpes Durance</fullName>
            </value>
            <value>
                <fullName>Cerballiance Artois</fullName>
            </value>
            <value>
                <fullName>Cerballiance Bourgogne</fullName>
            </value>
            <value>
                <fullName>Cerballiance Bretagne</fullName>
            </value>
            <value>
                <fullName>Cerballiance Centre Val de Loire</fullName>
            </value>
            <value>
                <fullName>Cerballiance Charentes</fullName>
            </value>
            <value>
                <fullName>Cerballiance Dep Rhône</fullName>
            </value>
            <value>
                <fullName>Cerballiance Drôme Ardèche</fullName>
            </value>
            <value>
                <fullName>CERBALLIANCE HDF</fullName>
            </value>
            <value>
                <fullName>Cerballiance IDF</fullName>
            </value>
            <value>
                <fullName>Cerballiance Languedoc</fullName>
            </value>
            <value>
                <fullName>Cerballiance Loire</fullName>
            </value>
            <value>
                <fullName>Cerballiance Midi Pyrenees</fullName>
            </value>
            <value>
                <fullName>Cerballiance Normandie</fullName>
            </value>
            <value>
                <fullName>Cerballiance Occitanie</fullName>
            </value>
            <value>
                <fullName>Cerballiance Pyrenees</fullName>
            </value>
            <value>
                <fullName>Cerballiance Réunion</fullName>
            </value>
            <value>
                <fullName>Cerballiance Rhône Alpes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>