unpackaged/main/default/objects/Account/fields/Laboratoire_de_sous_traitance__c.field-meta.xml
<CustomField>
    <fullName>Laboratoire_de_sous_traitance__c</fullName>
    <label>Laboratoire d’Anapath vétérinaire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IDEXX</fullName>
            </value>
            <value>
                <fullName>IHP VETO</fullName>
            </value>
            <value>
                <fullName>LAPV AMBOISE/Vet Cyt</fullName>
            </value>
            <value>
                <fullName>LAPVSO</fullName>
            </value>
            <value>
                <fullName>VETODIAG</fullName>
            </value>
            <value>
                <fullName>VET HISTO</fullName>
            </value>
            <value>
                <fullName>VET DIAGNOSTICS</fullName>
            </value>
            <value>
                <fullName>VETOPATH</fullName>
            </value>
            <value>
                <fullName>CPC (MARINE CARLUS)</fullName>
            </value>
            <value>
                <fullName>CCPATH (Catherine LE FOLL)</fullName>
            </value>
            <value>
                <fullName>LPUN (Paul-Henri DUMAS)</fullName>
            </value>
            <value>
                <fullName>LAPV 57 (Michèle LEMAIRE)</fullName>
            </value>
            <value>
                <fullName>ORBIO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>