unpackaged/main/default/objects/Account/fields/les_cinq_niveaux_superieurs__c.field-meta.xml
<CustomField>
    <fullName>les_cinq_niveaux_superieurs__c</fullName>
    <formula>IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Parent.Name)) 
, 
HYPERLINK(Parent.Parent.Parent.Parent.Parent.Id, Parent.Parent.Parent.Parent.Parent.Name) &amp;&quot; &gt; &quot;&amp; BR() &amp; BR()&amp; HYPERLINK(Parent.Parent.Parent.Parent.Id, Parent.Parent.Parent.Parent.Name) &amp;&quot; &gt; &quot;&amp; BR() &amp; BR()&amp; HYPERLINK(Parent.Parent.Parent.Id, Parent.Parent.Parent.Name) &amp;&quot; &gt; &quot;&amp; BR() &amp; BR()&amp; HYPERLINK(Parent.Parent.Id, Parent.Parent.Name) &amp;&quot; &gt; &quot;&amp; BR() &amp; BR()&amp; HYPERLINK(Parent.Id, Parent.Name) &amp;&quot; &gt; &quot;&amp; BR() &amp; BR()&amp; Name 
, 
IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Name)) 
, 
HYPERLINK(Parent.Parent.Parent.Parent.Id, Parent.Parent.Parent.Parent.Name) &amp;&quot; &gt; &quot;&amp; BR() &amp; BR()&amp; HYPERLINK(Parent.Parent.Parent.Id, Parent.Parent.Parent.Name) &amp;&quot; &gt; &quot;&amp; BR() &amp; BR()&amp; HYPERLINK(Parent.Parent.Id, Parent.Parent.Name) &amp;&quot; &gt; &quot;&amp; BR() &amp; BR()&amp; HYPERLINK(Parent.Id, Parent.Name) &amp;&quot; &gt; &quot;&amp; BR() &amp; BR()&amp; Name 
, 
IF(NOT(ISBLANK(Parent.Parent.Parent.Name)) 
, 
HYPERLINK(Parent.Parent.Parent.Id, Parent.Parent.Parent.Name) &amp;&quot; &gt; &quot;&amp; BR() &amp; BR() &amp; HYPERLINK(Parent.Parent.Id, Parent.Parent.Name) &amp;&quot; &gt; &quot;&amp; BR() &amp; BR()&amp; HYPERLINK(Parent.Id, Parent.Name) &amp;&quot; &gt; &quot;&amp; BR() &amp; BR()&amp; Name 
, 
IF(NOT(ISBLANK(Parent.Parent.Name)) 
, 
HYPERLINK(Parent.Parent.Id, Parent.Parent.Name) &amp;&quot; &gt; &quot; &amp; BR() &amp; BR()&amp; HYPERLINK(Parent.Id, Parent.Name) &amp;&quot; &gt; &quot;&amp; BR() &amp; BR() &amp; Name 
, 
IF(NOT(ISBLANK(Parent.Name)) 
, 
HYPERLINK(Parent.Id, Parent.Name) &amp;&quot; &gt; &quot;&amp; BR() &amp; BR() &amp; Name 

, 
Name 
)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Les 5 niveaux supérieurs</label>
    <type>Text</type>
</CustomField>