unpackaged/main/default/objects/Account/fields/Mandat_de_prelevement__c.field-meta.xml
<CustomField>
    <fullName>Mandat_de_prelevement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>2PACE</description>
    <inlineHelpText>Cocher la case lorsque la clinique a remis le mandat de prélèvement SEPA signé.</inlineHelpText>
    <label>Mandat de prélèvement</label>
    <type>Checkbox</type>
</CustomField>