unpackaged/main/default/objects/Account/fields/March_Cerba_Vet__c.field-meta.xml
<CustomField>
    <fullName>March_Cerba_Vet__c</fullName>
    <label>Marché Cerba Vet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Market_Cerba_Vet_oco</valueSetName>
    </valueSet>
</CustomField>