unpackaged/main/default/objects/Account/fields/Moyen_recuperation_prelevements__c.field-meta.xml
<CustomField>
    <fullName>Moyen_recuperation_prelevements__c</fullName>
    <label>Moyen récupération prélèvements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Envoi par le client</fullName>
            </value>
            <value>
                <fullName>Collecté directement</fullName>
            </value>
            <value>
                <fullName>Collecté chez un correspondant maître</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>