unpackaged/main/default/objects/Account/fields/Nb_Dossiers_jour__c.field-meta.xml
<CustomField>
    <fullName>Nb_Dossiers_jour__c</fullName>
    <inlineHelpText>Nombre de dossiers global du laboratoire en biologie )</inlineHelpText>
    <label>Nb dossiers jour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>