unpackaged/main/default/objects/Account/fields/Nb_Lits_etablissements_de_soin__c.field-meta.xml
<CustomField>
    <fullName>Nb_Lits_etablissements_de_soin__c</fullName>
    <label>Nb lits établissements de soin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>