unpackaged/main/default/objects/Account/fields/Numero_SFA__c.field-meta.xml
<CustomField>
    <fullName>Numero_SFA__c</fullName>
    <displayFormat>SFA-{0000000000}</displayFormat>
    <label>Numéro SFA</label>
    <type>AutoNumber</type>
</CustomField>