unpackaged/main/default/objects/Account/fields/Periodicite_de_facturation__c.field-meta.xml
<CustomField>
    <fullName>Periodicite_de_facturation__c</fullName>
    <label>Périodicité de facturation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>J00</fullName>
                <label>J00 - EDITION QUOTIDIENNE</label>
            </value>
            <value>
                <fullName>S01</fullName>
                <label>S01 - EDITION HEBDOMADAIRE</label>
            </value>
            <value>
                <fullName>S02</fullName>
                <label>S02 - EDITION A LA QUINZAINE</label>
            </value>
            <value>
                <fullName>M01</fullName>
                <label>M01 - EDITION MENSUELLE</label>
            </value>
            <value>
                <fullName>Z00</fullName>
                <label>Z00 - NE PAS FACTURER</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>