unpackaged/main/default/objects/Account/fields/Points_de_passage_supprimes__c.field-meta.xml
<CustomField>
    <fullName>Points_de_passage_supprimes__c</fullName>
    <formula>HYPERLINK( 

&quot;/lightning/r/Report/00O1t000009Re1gEAC/view?a:t=1487190305660&amp;fv0=&quot; &amp; 

Id, 

$Label.Afficher 
, 
&quot;_new&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Points de passage supprimés</label>
    <type>Text</type>
</CustomField>