unpackaged/main/default/objects/Account/fields/Pr_cision_horaires_d_ouverture__c.field-meta.xml
<CustomField>
    <fullName>Pr_cision_horaires_d_ouverture__c</fullName>
    <description>Champs à intégrer dans la rubrique horaire de l&#39;objet compte afin de laisser l&#39;utilisateur ajouter des infromations complémentaires aux horaires d&#39;ouverture et fermeture</description>
    <label>Précision horaires d&#39;ouverture</label>
    <type>TextArea</type>
</CustomField>