unpackaged/main/default/objects/Account/fields/Raison_de_desactivation__c.field-meta.xml
<CustomField>
    <fullName>Raison_de_desactivation__c</fullName>
    <label>Raison de désactivation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fermé</fullName>
                <default>true</default>
                <label>Fermé</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>