unpackaged/main/default/objects/Account/fields/References_Client__c.field-meta.xml
<CustomField>
    <fullName>References_Client__c</fullName>
    <description>2PACE References du client à faire apparaitre sur la facture</description>
    <inlineHelpText>Références du client à faire apparaître sur la facture</inlineHelpText>
    <label>References Client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>