unpackaged/main/default/objects/Account/fields/Remise_REPLAY__c.field-meta.xml
<CustomField>
    <fullName>Remise_REPLAY__c</fullName>
    <description>2PACE</description>
    <label>🎓 % Remise REPLAY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>