unpackaged/main/default/objects/Account/fields/Remise_sur_facture_Cerba_Vet__c.field-meta.xml
<CustomField>
    <fullName>Remise_sur_facture_Cerba_Vet__c</fullName>
    <description>2PACE</description>
    <inlineHelpText>Remise globale sur la facture pour les produits remisables Cerba Vet analyses.</inlineHelpText>
    <label>🤝  Remise sur facture Cerba Vet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>