unpackaged/main/default/objects/Account/fields/S4_fin_date_de_derniere_mise_a_jour__c.field-meta.xml
<CustomField>
    <fullName>S4_fin_date_de_derniere_mise_a_jour__c</fullName>
    <label>S4 fin date de dernière mise à jour</label>
    <type>DateTime</type>
</CustomField>