unpackaged/main/default/objects/Account/fields/S4_fin_global_account_number__c.field-meta.xml
<CustomField>
    <fullName>S4_fin_global_account_number__c</fullName>
    <label>S4 fin global account number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>